--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,40 @@
 annotated-types==0.7.0
-blinker==1.4
-command-not-found==0.3
-cryptography==3.4.8
-dbus-python==1.2.18
-distro==1.7.0
-distro-info===1.1build1
+certifi==2023.7.22
+charset-normalizer==3.3.0
+colorama==0.4.6
+contourpy==1.1.1
+cycler==0.11.0
+et-xmlfile==1.1.0
+fonttools==4.42.1
 greenlet==3.0.3
-httplib2==0.20.2
-importlib-metadata==4.6.4
-jeepney==0.7.1
-keyring==23.5.0
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
-more-itertools==8.10.0
-netifaces==0.11.0
-oauthlib==3.2.0
+idna==3.4
+iniconfig==2.0.0
+kiwisolver==1.4.5
+lxml==4.9.3
+matplotlib==3.8.0
+numpy==1.25.1
+opencv-python==4.8.0.74
+openpyxl==3.1.2
+packaging==23.1
+pandas==2.2.0
+Pillow==10.0.1
+pluggy==1.5.0
 psycopg2==2.9.9
+pyarrow==15.0.0
 pydantic==2.8.2
 pydantic-settings==2.4.0
 pydantic_core==2.20.1
-pygame==2.6.0
-PyGObject==3.42.1
-PyJWT==2.3.0
-pyparsing==2.4.7
-python-apt==2.4.0+ubuntu1
+pygame==2.5.1
+pyparsing==3.1.1
+pytest==8.3.3
+python-dateutil==2.8.2
+python-docx==0.8.11
 python-dotenv==1.0.1
-PyYAML==5.4.1
-SecretStorage==3.3.1
+pytz==2024.1
+requests==2.31.0
+scipy==1.11.2
 six==1.16.0
 SQLAlchemy==2.0.34
-systemd-python==234
 typing_extensions==4.12.2
-ubuntu-advantage-tools==8001
-ufw==0.36.1
-unattended-upgrades==0.1
-wadllib==1.3.6
-zipp==1.0.0
+tzdata==2024.1
+urllib3==2.0.6
