--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,6 @@ services:
       - POSTGRES_PASSWORD=${DATABASE_PASSWORD}
       - POSTGRES_DB=${DATABASE_NAME}
     ports:
-      - '${DATABASE_PORT}:${DATABASE_PORT}'
+      - '${DATABASE_PORT}:5432'
     volumes:
       - ./db:/var/lib/postgresql/data
