--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,34 @@
 annotated-types==0.7.0
+blinker==1.4
 certifi==2023.7.22
 charset-normalizer==3.3.0
 colorama==0.4.6
+command-not-found==0.3
 contourpy==1.1.1
+cryptography==3.4.8
 cycler==0.11.0
+dbus-python==1.2.18
+distro==1.7.0
+distro-info===1.1build1
 et-xmlfile==1.1.0
+exceptiongroup==1.2.2
 fonttools==4.42.1
 greenlet==3.0.3
+httplib2==0.20.2
 idna==3.4
+importlib-metadata==4.6.4
 iniconfig==2.0.0
+jeepney==0.7.1
+keyring==23.5.0
 kiwisolver==1.4.5
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
 lxml==4.9.3
+more-itertools==8.10.0
+netifaces==0.11.0
+numpy==1.26.4
+oauthlib==3.2.0
 opencv-python==4.8.0.74
 openpyxl==3.1.2
 packaging==23.1
@@ -22,15 +40,28 @@ pydantic==2.8.2
 pydantic-settings==2.4.0
 pydantic_core==2.20.1
 pygame==2.5.1
+PyGObject==3.42.1
+PyJWT==2.3.0
 pyparsing==3.1.1
 pytest==8.3.3
+python-apt==2.4.0+ubuntu1
 python-dateutil==2.8.2
 python-docx==0.8.11
 python-dotenv==1.0.1
 pytz==2024.1
+PyYAML==5.4.1
 requests==2.31.0
+SecretStorage==3.3.1
 six==1.16.0
 SQLAlchemy==2.0.34
+SQLAlchemy-Utils==0.41.2
+systemd-python==234
+tomli==2.0.1
 typing_extensions==4.12.2
 tzdata==2024.1
+ubuntu-advantage-tools==8001
+ufw==0.36.1
+unattended-upgrades==0.1
 urllib3==2.0.6
+wadllib==1.3.6
+zipp==1.0.0
